--- a/environment.yaml
+++ b/environment.yaml
@@ -2,11 +2,11 @@ name: vision
 channels:
   - defaults
 dependencies:
-  - ca-certificates=2019.5.15=0
+  - ca-certificates=2019.5.15=1
   - certifi=2019.6.16=py37_1
   - openssl=1.1.1c=he774522_1
-  - pip=19.1.1=py37_0
-  - python=3.7.3=h8c8aaf0_1
+  - pip=19.2.2=py37_0
+  - python=3.7.4=h5263a28_0
   - setuptools=41.0.1=py37_0
   - sqlite=3.29.0=he774522_0
   - vc=14.1=h0510ff6_4
@@ -25,8 +25,11 @@ dependencies:
     - python-dateutil==2.8.0
     - pytz==2019.2
     - pywavelets==1.0.3
+    - ruamel-yaml==0.16.2
+    - ruamel-yaml-clib==0.1.2
     - scikit-image==0.15.0
+    - scipy==1.3.1
     - shiboken2==5.13.0
     - six==1.12.0
-prefix: C:\Users\KosikII\AppData\Local\Continuum\miniconda3\envs\vision
+prefix: D:\Miniconda\envs\vision
 
