Implemented image viewer path overlayer plugin to create layered image using images from sibling directories.

--- a/vision/bsmu/vision/app/App.conf.yaml
+++ b/vision/bsmu/vision/app/App.conf.yaml
@@ -3,3 +3,4 @@ plugins:
   - bsmu.vision.plugins.loaders.image.simple.SimpleImageFileLoaderPlugin
   - bsmu.vision.plugins.visualizers.image.flat.FlatImageVisualizerPlugin
   - bsmu.vision.plugins.walkers.file.MdiImageLayerFileWalkerPlugin
+  - bsmu.vision.plugins.overlayers.path.ImageViewerPathOverlayerPlugin
