--- a/vision/bsmu/vision/plugins/overlayers/ImageViewerPathOverlayerPlugin.conf.yaml
+++ b/vision/bsmu/vision/plugins/overlayers/ImageViewerPathOverlayerPlugin.conf.yaml
@@ -1,10 +1,12 @@
 layers:
-  masks:
-    palette:
-      - [1, 200, 90, 90, 80]
-      - [2, 90, 90, 200, 80]
-    opacity: 0.8
+#  masks:
+#    palette:
+#      - [1, 200, 90, 90, 80]
+#      - [2, 90, 90, 200, 80]
+#    opacity: 0.8
   predictions:
+    as_gray: True
     palette:
-      - [1, 100, 100, 200, 200]
+      - [0, 100, 100, 200, 200]
+      - [1, 200, 200, 200, 220]
     opacity: 0.5
