--- a/vision/bsmu/vision/app/App.conf.yaml
+++ b/vision/bsmu/vision/app/App.conf.yaml
@@ -1,7 +1,9 @@
 plugins:
   - bsmu.vision.plugins.file_dropper.FileDropperPlugin
   - bsmu.vision.plugins.loaders.image.simple.SimpleImageFileLoaderPlugin
+  - bsmu.vision.plugins.loaders.dicom.multi_frame.MultiFrameDicomFileLoaderPlugin
   - bsmu.vision.plugins.visualizers.image.flat.FlatImageVisualizerPlugin
+  - bsmu.vision.plugins.visualizers.dicom.plane.PlaneDicomVisualizerPlugin
   - bsmu.vision.plugins.walkers.file.MdiImageLayerFileWalkerPlugin
   - bsmu.vision.plugins.overlayers.path.ImageViewerPathOverlayerPlugin
   - bsmu.vision.plugins.layer_controller.MdiImageViewerLayerControllerPlugin
