Viewer tool can use the active layer as image layer, or get image layer name or number from config. Smart brush can draw on multichannel and singlechannel images.

--- a/vision/bsmu/vision/plugins/tools/viewer/ViewerToolPlugin.conf.yaml
+++ b/vision/bsmu/vision/plugins/tools/viewer/ViewerToolPlugin.conf.yaml
@@ -1,6 +1,7 @@
 layers:
-  image:
-    name: images
+  image: active_layer
+#    name: images
+#    number: 0
   mask:
     name: masks
     # Next properties will be used, if there is no mask and we have to create one
