--- a/environment.yaml
+++ b/environment.yaml
@@ -19,8 +19,10 @@ dependencies:
     - networkx==2.3
     - nibabel==2.4.1
     - numpy==1.17.0
+    - opencv-python==4.2.0.32
     - pandas==0.25.0
     - pillow==6.1.0
+    - pydicom==1.4.2
     - pyside2==5.13.0
     - python-dateutil==2.8.0
     - pytz==2019.2
@@ -31,5 +33,4 @@ dependencies:
     - scipy==1.3.1
     - shiboken2==5.13.0
     - six==1.12.0
-prefix: D:\Miniconda\envs\vision
-
+    - sortedcontainers==2.1.0
