Implemented main features of bone age app.

--- a/vision/bsmu/vision/app/App.conf.yaml
+++ b/vision/bsmu/vision/app/App.conf.yaml
@@ -40,7 +40,7 @@ plugins:
   - bsmu.vision.plugins.layer_controller.MdiImageViewerLayerControllerPlugin
 #  - bsmu.vision.plugins.tools.viewer.image.smart_brush.SmartBrushImageViewerToolPlugin
   - bsmu.vision.plugins.post_load_converters.image_to_layered.ImageToLayeredImagePostLoadConverterPlugin
-  - bsmu.vision.plugins.layouts.base.MdiLayoutPlugin
+#  - bsmu.vision.plugins.layouts.base.MdiLayoutPlugin
 #  - bsmu.vision.plugins.color_contrast.ColorContrastPlugin
 
   - bsmu.vision.plugins.bone_age.table_visualizer.TableVisualizerPlugin
