--- a/vision/bsmu/vision/app/App.conf.yaml
+++ b/vision/bsmu/vision/app/App.conf.yaml
@@ -26,7 +26,8 @@
 #
 
 
-plugins:
+# Bone Age Analyzer
+plugins-old:
   - bsmu.vision.plugins.bone_age.main_window.BoneAgeMainWindowPlugin -> bsmu.vision.plugins.windows.main.MainWindowPlugin
 #  - mdi_plugin = bsmu.vision.plugins.doc_interfaces.mdi.MdiPlugin(main_window_plugin)
 #  - bsmu.vision.plugins.file_dropper.FileDropperPlugin(mdi_plugin)
@@ -52,3 +53,27 @@ plugins:
   - bsmu.vision.plugins.bone_age.atlas_visualizer.BoneAgeAtlasVisualizerPlugin
   - bsmu.vision.plugins.bone_age.journal_exporter.PatientBoneAgeJournalExporterPlugin
   - bsmu.vision.plugins.bone_age.image_loader.ImageLoaderPlugin
+
+
+# Retinal Fundus Analyzer
+plugins:
+  - bsmu.vision.plugins.windows.main.MainWindowPlugin
+  - bsmu.vision.plugins.file_dropper.FileDropperPlugin
+  - bsmu.vision.plugins.loaders.image.simple.SimpleImageFileLoaderPlugin
+  - bsmu.vision.plugins.visualizers.image.flat.FlatImageVisualizerPlugin
+  - bsmu.vision.plugins.layouts.base.MdiLayoutPlugin
+  - bsmu.vision.plugins.bone_age.image_loader.ImageLoaderPlugin
+  - bsmu.vision.plugins.walkers.file.MdiImageLayerFileWalkerPlugin
+
+  - bsmu.vision.plugins.tools.viewer.image.smart_brush.SmartBrushImageViewerToolPlugin
+
+  - bsmu.vision.plugins.post_load_converters.image_to_layered.ImageToLayeredImagePostLoadConverterPlugin
+  - bsmu.vision.plugins.loaders.nifti.base.NiftiFileLoaderPlugin
+  - bsmu.vision.plugins.visualizers.image.volume.VolumeImageVisualizerPlugin
+  - bsmu.vision.plugins.visualizers.image.layered.LayeredImageVisualizerPlugin
+  - bsmu.vision.plugins.walkers.slice.MdiVolumeSliceWalkerPlugin
+
+  - bsmu.vision.plugins.overlayers.path.ImageViewerPathOverlayerPlugin
+#  - bsmu.vision.plugins.overlayers.intersection.ImageViewerIntersectionOverlayerPlugin
+
+  - bsmu.vision.plugins.layer_controller.MdiImageViewerLayerControllerPlugin
