--- a/environment.yaml
+++ b/environment.yaml
@@ -1,37 +1,46 @@
-name: vision
+name: vision-py39-pyside2
 channels:
   - defaults
 dependencies:
-  - ca-certificates=2019.5.15=1
-  - certifi=2019.6.16=py37_1
-  - openssl=1.1.1c=he774522_1
-  - pip=19.2.2=py37_0
-  - python=3.7.4=h5263a28_0
-  - setuptools=41.0.1=py37_0
-  - sqlite=3.29.0=he774522_0
-  - vc=14.1=h0510ff6_4
-  - vs2015_runtime=14.15.26706=h3a45250_4
-  - wheel=0.33.4=py37_0
-  - wincertstore=0.2=py37_0
+  - ca-certificates=2021.7.5=haa95532_1
+  - certifi=2021.5.30=py39haa95532_0
+  - openssl=1.1.1l=h2bbff1b_0
+  - pip=21.2.4=py38haa95532_0
+  - python=3.9.6=h6244533_1
+  - setuptools=52.0.0=py39haa95532_0
+  - sqlite=3.36.0=h2bbff1b_0
+  - tzdata=2021a=h5d7bf9c_0
+  - vc=14.2=h21ff451_1
+  - vs2015_runtime=14.27.29016=h5e58377_2
+  - wheel=0.37.0=pyhd3eb1b0_1
+  - wincertstore=0.2=py39h2bbff1b_0
   - pip:
-    - cx-freeze==6.1
-    - decorator==4.4.0
-    - imageio==2.5.0
-    - networkx==2.3
-    - nibabel==2.4.1
-    - numpy==1.17.0
-    - opencv-python==4.2.0.32
-    - pandas==0.25.0
-    - pillow==6.1.0
-    - pydicom==1.4.2
-    - pyside2==5.13.0
-    - python-dateutil==2.8.0
-    - pytz==2019.2
-    - pywavelets==1.0.3
-    - ruamel-yaml==0.16.2
-    - ruamel-yaml-clib==0.1.2
-    - scikit-image==0.15.0
-    - scipy==1.3.1
-    - shiboken2==5.13.0
-    - six==1.12.0
-    - sortedcontainers==2.1.0
+    - cx-freeze==6.8
+    - cx-logging==3.0
+    - cycler==0.10.0
+    - imageio==2.9.0
+    - importlib-metadata==4.8.1
+    - kiwisolver==1.3.2
+    - matplotlib==3.4.3
+    - networkx==2.6.3
+    - nibabel==3.2.1
+    - numpy==1.21.2
+    - opencv-python==4.5.3.56
+    - packaging==21.0
+    - pandas==1.3.3
+    - pillow==8.3.2
+    - pydicom==2.2.1
+    - pyparsing==2.4.7
+    - pyside2==5.15.2
+    - python-dateutil==2.8.2
+    - pytz==2021.1
+    - pywavelets==1.1.1
+    - ruamel-yaml==0.17.16
+    - ruamel-yaml-clib==0.2.6
+    - scikit-image==0.18.3
+    - scipy==1.7.1
+    - shiboken2==5.15.2
+    - six==1.16.0
+    - sortedcontainers==2.4.0
+    - tifffile==2021.8.30
+    - zipp==3.5.0
