Added prototype of dnn segmenter using onnx-runtime. Working on build.py using new version of cx_Freeze, added some code to get dirs with data-files of plugins.

--- a/vision/bsmu/vision/plugins/overlayers/ImageViewerPathOverlayerPlugin.conf.yaml
+++ b/vision/bsmu/vision/plugins/overlayers/ImageViewerPathOverlayerPlugin.conf.yaml
@@ -2,10 +2,13 @@ layers:
   masks:
     palette:
       - [0, 0, 0, 0, 0]
-      - [1, 0, 255, 0, 255]
+#      - [1, 0, 255, 0, 255]
+
+#      - [1, 0, 255, 0, 255]
+#      - [6, 255, 0, 0, 255]
     opacity: 0.5
-  predictions:
-    palette:
-      - [0, 0, 0, 0, 0]
-      - [1, 255, 0, 0, 255]
-    opacity: 0.4
+#  predictions:
+#    palette:
+#      - [0, 0, 0, 0, 0]
+#      - [1, 255, 0, 0, 255]
+#    opacity: 0.4
