--- a/environment.yaml
+++ b/environment.yaml
@@ -18,6 +18,7 @@ dependencies:
     - cx-freeze==6.8
     - cx-logging==3.0
     - cycler==0.10.0
+    - flatbuffers==2.0
     - imageio==2.9.0
     - importlib-metadata==4.8.1
     - kiwisolver==1.3.2
@@ -25,10 +26,12 @@ dependencies:
     - networkx==2.6.3
     - nibabel==3.2.1
     - numpy==1.21.2
+    - onnxruntime-gpu==1.9.0
     - opencv-python==4.5.3.56
     - packaging==21.0
     - pandas==1.3.3
     - pillow==8.3.2
+    - protobuf==3.19.1
     - pydicom==2.2.1
     - pyparsing==2.4.7
     - pyside2==5.15.2
