--- a/vision-app/bsmu/vision/app/configs/App.conf.yaml
+++ b/vision-app/bsmu/vision/app/configs/App.conf.yaml
@@ -28,50 +28,51 @@
 
 # Retinal Fundus Analyzer
 plugins:
-#  - bsmu.vision.plugins.windows.main.MainWindowPlugin
+#  - bsmu.vision.plugins.retinal_fundus.main_window.RetinalFundusMainWindowPlugin:
+#      replace: bsmu.vision.plugins.windows.main.MainWindowPlugin
+#      alias: main_window
+#
+#  - bsmu.vision.plugins.retinal_fundus.table_visualizer.RetinalFundusTableVisualizerPlugin
+#  - bsmu.vision.plugins.file_dropper.FileDropperPlugin
+#  - bsmu.vision.plugins.bone_age.image_loader.ImageLoaderPlugin
+#  - bsmu.vision.plugins.loaders.image.simple.SimpleImageFileLoaderPlugin
+#  - bsmu.vision.plugins.visualizers.image.flat.FlatImageVisualizerPlugin
+#  - bsmu.vision.plugins.layouts.base.MdiLayoutPlugin
+#  - bsmu.vision.plugins.walkers.file.MdiImageLayerFileWalkerPlugin
+#  - bsmu.vision.plugins.tools.viewer.image.smart_brush.SmartBrushImageViewerToolPlugin
+#  - bsmu.vision.plugins.post_load_converters.image_to_layered.ImageToLayeredImagePostLoadConverterPlugin
+#  - bsmu.vision.plugins.visualizers.image.layered.LayeredImageVisualizerPlugin
+#  - bsmu.vision.plugins.loaders.nifti.base.NiftiFileLoaderPlugin
+#  - bsmu.vision.plugins.visualizers.image.volume.VolumeImageVisualizerPlugin
+#  - bsmu.vision.plugins.walkers.slice.MdiVolumeSliceWalkerPlugin
+#  - bsmu.vision.plugins.overlayers.path.ImageViewerPathOverlayerPlugin
+#  - bsmu.vision.plugins.overlayers.intersection.ImageViewerIntersectionOverlayerPlugin
+#  - bsmu.vision.plugins.layer_controller.MdiImageViewerLayerControllerPlugin
+
+
+
   - bsmu.vision.plugins.retinal_fundus.main_window.RetinalFundusMainWindowPlugin:
       replace: bsmu.vision.plugins.windows.main.MainWindowPlugin
       alias: main_window
 
   - bsmu.vision.plugins.retinal_fundus.table_visualizer.RetinalFundusTableVisualizerPlugin
+
   - bsmu.vision.plugins.file_dropper.FileDropperPlugin
-  - bsmu.vision.plugins.bone_age.image_loader.ImageLoaderPlugin
   - bsmu.vision.plugins.loaders.image.simple.SimpleImageFileLoaderPlugin
   - bsmu.vision.plugins.visualizers.image.flat.FlatImageVisualizerPlugin
-  - bsmu.vision.plugins.layouts.base.MdiLayoutPlugin
-  - bsmu.vision.plugins.walkers.file.MdiImageLayerFileWalkerPlugin
-  - bsmu.vision.plugins.tools.viewer.image.smart_brush.SmartBrushImageViewerToolPlugin
+#  - bsmu.vision.plugins.layouts.base.MdiLayoutPlugin
+  - bsmu.vision.plugins.bone_age.image_loader.ImageLoaderPlugin
+#  - bsmu.vision.plugins.walkers.file.MdiImageLayerFileWalkerPlugin
+
+#  - bsmu.vision.plugins.tools.viewer.image.smart_brush.SmartBrushImageViewerToolPlugin
+
   - bsmu.vision.plugins.post_load_converters.image_to_layered.ImageToLayeredImagePostLoadConverterPlugin
+#  - bsmu.vision.plugins.loaders.nifti.base.NiftiFileLoaderPlugin
+#  - bsmu.vision.plugins.visualizers.image.volume.VolumeImageVisualizerPlugin
   - bsmu.vision.plugins.visualizers.image.layered.LayeredImageVisualizerPlugin
-  - bsmu.vision.plugins.loaders.nifti.base.NiftiFileLoaderPlugin
-  - bsmu.vision.plugins.visualizers.image.volume.VolumeImageVisualizerPlugin
-  - bsmu.vision.plugins.walkers.slice.MdiVolumeSliceWalkerPlugin
-  - bsmu.vision.plugins.overlayers.path.ImageViewerPathOverlayerPlugin
-  - bsmu.vision.plugins.overlayers.intersection.ImageViewerIntersectionOverlayerPlugin
+#  - bsmu.vision.plugins.walkers.slice.MdiVolumeSliceWalkerPlugin
+
+#  - bsmu.vision.plugins.overlayers.path.ImageViewerPathOverlayerPlugin
+#  - bsmu.vision.plugins.overlayers.intersection.ImageViewerIntersectionOverlayerPlugin
+
   - bsmu.vision.plugins.layer_controller.MdiImageViewerLayerControllerPlugin
-#  - bsmu.vision.plugins.color_contrast.ColorContrastPlugin
-
-
-
-#  - bsmu.vision.plugins.retinal_fundus.main_window.RetinalFundusMainWindowPlugin -> bsmu.vision.plugins.windows.main.MainWindowPlugin
-#  - bsmu.vision.plugins.retinal_fundus.table_visualizer.RetinalFundusTableVisualizerPlugin
-#
-#  - bsmu.vision.plugins.file_dropper.FileDropperPlugin
-#  - bsmu.vision.plugins.loaders.image.simple.SimpleImageFileLoaderPlugin
-#  - bsmu.vision.plugins.visualizers.image.flat.FlatImageVisualizerPlugin
-##  - bsmu.vision.plugins.layouts.base.MdiLayoutPlugin
-#  - bsmu.vision.plugins.bone_age.image_loader.ImageLoaderPlugin
-##  - bsmu.vision.plugins.walkers.file.MdiImageLayerFileWalkerPlugin
-#
-##  - bsmu.vision.plugins.tools.viewer.image.smart_brush.SmartBrushImageViewerToolPlugin
-#
-#  - bsmu.vision.plugins.post_load_converters.image_to_layered.ImageToLayeredImagePostLoadConverterPlugin
-##  - bsmu.vision.plugins.loaders.nifti.base.NiftiFileLoaderPlugin
-##  - bsmu.vision.plugins.visualizers.image.volume.VolumeImageVisualizerPlugin
-#  - bsmu.vision.plugins.visualizers.image.layered.LayeredImageVisualizerPlugin
-##  - bsmu.vision.plugins.walkers.slice.MdiVolumeSliceWalkerPlugin
-#
-##  - bsmu.vision.plugins.overlayers.path.ImageViewerPathOverlayerPlugin
-##  - bsmu.vision.plugins.overlayers.intersection.ImageViewerIntersectionOverlayerPlugin
-#
-#  - bsmu.vision.plugins.layer_controller.MdiImageViewerLayerControllerPlugin
