--- a/vision-app/bsmu/vision/app/configs/App.conf.yaml
+++ b/vision-app/bsmu/vision/app/configs/App.conf.yaml
@@ -1,78 +1,16 @@
-#plugins:
-#  - file_dropper = bsmu.vision.plugins.file_dropper.FileDropperPlugin(p1, p2)
-#  - bsmu.vision.plugins.loaders.image.simple.SimpleImageFileLoaderPlugin
-
-#plugins:
-#  - bsmu.vision.plugin1
-#  - common_plugin: bsmu.vision.plugins.file_dropper.FileDropperPlugin
-#  - bsmu.vision.plugin5(common_plugin)
-#  - bsmu.vision.plugin6(common_plugin, key_arg=common_plugin)
-
-
-
-#plugins:
-#  - plugin1
-#  - plugin2
-#  - plugin3
-#
-#  - common_plugin: plugin4
-#
-#  - plugin8:
-#    - name: tt
-#    - common_plugin
-#    - name: www
-#  - plugin9
-#    - common_plugin
-#
-
-
-# Retinal Fundus Analyzer
 plugins:
-#  - bsmu.vision.plugins.retinal_fundus.main_window.RetinalFundusMainWindowPlugin:
-#      replace: bsmu.vision.plugins.windows.main.MainWindowPlugin
-#      alias: main_window
-#
-#  - bsmu.vision.plugins.retinal_fundus.table_visualizer.RetinalFundusTableVisualizerPlugin
-#  - bsmu.vision.plugins.file_dropper.FileDropperPlugin
-#  - bsmu.vision.plugins.bone_age.image_loader.ImageLoaderPlugin
-#  - bsmu.vision.plugins.loaders.image.simple.SimpleImageFileLoaderPlugin
-#  - bsmu.vision.plugins.visualizers.image.flat.FlatImageVisualizerPlugin
-#  - bsmu.vision.plugins.layouts.base.MdiLayoutPlugin
-#  - bsmu.vision.plugins.walkers.file.MdiImageLayerFileWalkerPlugin
-#  - bsmu.vision.plugins.tools.viewer.image.smart_brush.SmartBrushImageViewerToolPlugin
-#  - bsmu.vision.plugins.post_load_converters.image_to_layered.ImageToLayeredImagePostLoadConverterPlugin
-#  - bsmu.vision.plugins.visualizers.image.layered.LayeredImageVisualizerPlugin
-#  - bsmu.vision.plugins.loaders.nifti.base.NiftiFileLoaderPlugin
-#  - bsmu.vision.plugins.visualizers.image.volume.VolumeImageVisualizerPlugin
-#  - bsmu.vision.plugins.walkers.slice.MdiVolumeSliceWalkerPlugin
-#  - bsmu.vision.plugins.overlayers.path.ImageViewerPathOverlayerPlugin
-#  - bsmu.vision.plugins.overlayers.intersection.ImageViewerIntersectionOverlayerPlugin
-#  - bsmu.vision.plugins.layer_controller.MdiImageViewerLayerControllerPlugin
-
-
-
-  - bsmu.vision.plugins.retinal_fundus.main_window.RetinalFundusMainWindowPlugin:
-      replace: bsmu.vision.plugins.windows.main.MainWindowPlugin
-      alias: main_window
-
-  - bsmu.vision.plugins.retinal_fundus.table_visualizer.RetinalFundusTableVisualizerPlugin
-
+  - bsmu.vision.plugins.windows.main.MainWindowPlugin
   - bsmu.vision.plugins.file_dropper.FileDropperPlugin
   - bsmu.vision.plugins.loaders.image.simple.SimpleImageFileLoaderPlugin
-  - bsmu.vision.plugins.visualizers.image.flat.FlatImageVisualizerPlugin
-#  - bsmu.vision.plugins.layouts.base.MdiLayoutPlugin
-  - bsmu.vision.plugins.bone_age.image_loader.ImageLoaderPlugin
-#  - bsmu.vision.plugins.walkers.file.MdiImageLayerFileWalkerPlugin
-
-#  - bsmu.vision.plugins.tools.viewer.image.smart_brush.SmartBrushImageViewerToolPlugin
-
+  - bsmu.vision.plugins.loaders.nifti.base.NiftiFileLoaderPlugin
   - bsmu.vision.plugins.post_load_converters.image_to_layered.ImageToLayeredImagePostLoadConverterPlugin
-#  - bsmu.vision.plugins.loaders.nifti.base.NiftiFileLoaderPlugin
-#  - bsmu.vision.plugins.visualizers.image.volume.VolumeImageVisualizerPlugin
+  - bsmu.vision.plugins.visualizers.image.flat.FlatImageVisualizerPlugin
+  - bsmu.vision.plugins.visualizers.image.volume.VolumeImageVisualizerPlugin
   - bsmu.vision.plugins.visualizers.image.layered.LayeredImageVisualizerPlugin
-#  - bsmu.vision.plugins.walkers.slice.MdiVolumeSliceWalkerPlugin
-
-#  - bsmu.vision.plugins.overlayers.path.ImageViewerPathOverlayerPlugin
-#  - bsmu.vision.plugins.overlayers.intersection.ImageViewerIntersectionOverlayerPlugin
-
+  - bsmu.vision.plugins.overlayers.path.ImageViewerPathOverlayerPlugin
+  - bsmu.vision.plugins.overlayers.intersection.ImageViewerIntersectionOverlayerPlugin
+  - bsmu.vision.plugins.layouts.base.MdiLayoutPlugin
+  - bsmu.vision.plugins.walkers.file.MdiImageLayerFileWalkerPlugin
+  - bsmu.vision.plugins.walkers.slice.MdiVolumeSliceWalkerPlugin
+  - bsmu.vision.plugins.tools.viewer.image.smart_brush.SmartBrushImageViewerToolPlugin
   - bsmu.vision.plugins.layer_controller.MdiImageViewerLayerControllerPlugin
