Implemented fundus disk segmentation using dnn model with subsequent removal of garbage.

--- a/retinal-fundus/bsmu/retinal_fundus/plugins/configs/RetinalFundusTableVisualizerPlugin.conf.yaml
+++ b/retinal-fundus/bsmu/retinal_fundus/plugins/configs/RetinalFundusTableVisualizerPlugin.conf.yaml
@@ -1,1 +1,4 @@
-segmenter-model-name: '015_saved_model.onnx'
+disk-segmenter-model:
+  name: '005_saved_model.onnx'
+  input-size: [352, 352, 3]
+  preprocessing-mode: 'image-net-tf'
