Working on soft mask visualization as indexed image with palette, generated using color transfer function.

--- a/vision-plugins/bsmu/vision/plugins/overlayers/configs/ImageViewerPathOverlayerPlugin.conf.yaml
+++ b/vision-plugins/bsmu/vision/plugins/overlayers/configs/ImageViewerPathOverlayerPlugin.conf.yaml
@@ -1,14 +1,15 @@
 layers:
   masks:
-    palette:
-      - [0, 0, 0, 0, 0]
-#      - [1, 0, 255, 0, 255]
-
+    rgb-color: [0, 255, 0]
+#    palette:
+#      - [0, 0, 0, 0, 0]
 #      - [1, 0, 255, 0, 255]
 #      - [6, 255, 0, 0, 255]
     opacity: 0.5
-#  predictions:
+  predictions:
+    rgb-color: [255, 0, 0]
 #    palette:
 #      - [0, 0, 0, 0, 0]
-#      - [1, 255, 0, 0, 255]
-#    opacity: 0.4
+#      - [1, 0, 255, 255, 255]
+#      - [6, 255, 0, 255, 255]
+    opacity: 0.4
