--- a/vision-plugins/bsmu/vision/plugins/tools/viewer/configs/ViewerToolPlugin.conf.yaml
+++ b/vision-plugins/bsmu/vision/plugins/tools/viewer/configs/ViewerToolPlugin.conf.yaml
@@ -6,15 +6,17 @@ layers:
     name: masks
     # Next properties will be used, if there is no mask and we have to create one
     palette:
-      background: [0, 0, 0, 0, 0]
-      foreground: [1, 50, 170, 230, 255]
+      row-by-name:
+        background: [0, 0, 0, 0, 0]
+        foreground: [1, 50, 170, 230, 255]
     opacity: 0.5
   tool_mask:
     name: tool-mask
     # Next properties will be used, if we have to create new tool mask
     palette:
-      background: [0, 0, 0, 0, 0]
-      foreground: [1, 130, 210, 50, 255]
-      eraser: [2, 210, 60, 40, 255]
-      unconnected_component: [3, 210, 130, 50, 255]
+      row-by-name:
+        background: [0, 0, 0, 0, 0]
+        foreground: [1, 130, 210, 50, 255]
+        eraser: [2, 210, 60, 40, 255]
+        unconnected_component: [3, 210, 130, 50, 255]
     opacity: 0.5
