--- a/environment.yaml
+++ b/environment.yaml
@@ -5,7 +5,6 @@ dependencies:
   - ca-certificates=2021.7.5=haa95532_1
   - certifi=2021.5.30=py39haa95532_0
   - openssl=1.1.1l=h2bbff1b_0
-  - pip=21.2.4=py38haa95532_0
   - python=3.9.6=h6244533_1
   - setuptools=52.0.0=py39haa95532_0
   - sqlite=3.36.0=h2bbff1b_0
@@ -15,12 +14,16 @@ dependencies:
   - wheel=0.37.0=pyhd3eb1b0_1
   - wincertstore=0.2=py39h2bbff1b_0
   - pip:
-    - cx-freeze==6.8
+    - atomicwrites==1.4.0
+    - attrs==21.2.0
+    - colorama==0.4.4
+    - cx-freeze==6.8.2
     - cx-logging==3.0
     - cycler==0.10.0
     - flatbuffers==2.0
     - imageio==2.9.0
     - importlib-metadata==4.8.1
+    - iniconfig==1.1.1
     - kiwisolver==1.3.2
     - matplotlib==3.4.3
     - networkx==2.6.3
@@ -31,10 +34,14 @@ dependencies:
     - packaging==21.0
     - pandas==1.3.3
     - pillow==8.3.2
+    - pip==21.3.1
+    - pluggy==1.0.0
     - protobuf==3.19.1
+    - py==1.11.0
     - pydicom==2.2.1
     - pyparsing==2.4.7
     - pyside2==5.15.2
+    - pytest==6.2.5
     - python-dateutil==2.8.2
     - pytz==2021.1
     - pywavelets==1.1.1
@@ -46,4 +53,5 @@ dependencies:
     - six==1.16.0
     - sortedcontainers==2.4.0
     - tifffile==2021.8.30
+    - toml==0.10.2
     - zipp==3.5.0
