--- a/vision-app/src/bsmu/vision/app/configs/App.conf.yaml
+++ b/vision-app/src/bsmu/vision/app/configs/App.conf.yaml
@@ -2,16 +2,16 @@ plugins:
   - bsmu.vision.plugins.windows.main.MainWindowPlugin
   - bsmu.vision.plugins.file_dropper.FileDropperPlugin
   - bsmu.vision.plugins.loaders.image.simple.SimpleImageFileLoaderPlugin
-  - bsmu.vision.plugins.loaders.nifti.base.NiftiFileLoaderPlugin
+#  - bsmu.vision.plugins.loaders.nifti.base.NiftiFileLoaderPlugin
   - bsmu.vision.plugins.post_load_converters.image_to_layered.ImageToLayeredImagePostLoadConverterPlugin
   - bsmu.vision.plugins.visualizers.image.flat.FlatImageVisualizerPlugin
-  - bsmu.vision.plugins.visualizers.image.volume.VolumeImageVisualizerPlugin
+#  - bsmu.vision.plugins.visualizers.image.volume.VolumeImageVisualizerPlugin
   - bsmu.vision.plugins.visualizers.image.layered.LayeredImageVisualizerPlugin
   - bsmu.vision.plugins.overlayers.path.ImageViewerPathOverlayerPlugin
 #  - bsmu.vision.plugins.overlayers.intersection.ImageViewerIntersectionOverlayerPlugin
   - bsmu.vision.plugins.layouts.base.MdiLayoutPlugin
   - bsmu.vision.plugins.walkers.file.MdiImageLayerFileWalkerPlugin
-  - bsmu.vision.plugins.walkers.slice.MdiVolumeSliceWalkerPlugin
+#  - bsmu.vision.plugins.walkers.slice.MdiVolumeSliceWalkerPlugin
   - bsmu.vision.plugins.tools.viewer.image.smart_brush.SmartBrushImageViewerToolPlugin
   - bsmu.vision.plugins.layer_controller.MdiImageViewerLayerControllerPlugin
   - bsmu.vision.plugins.layers_view.LayersTableViewPlugin
