Fixed warning in the bone-age predictor. Added application config values to customize high dpi scaling and warnings traceback.

--- a/bone-age/src/bsmu/bone_age/app/configs/BoneAgeApp.conf.yaml
+++ b/bone-age/src/bsmu/bone_age/app/configs/BoneAgeApp.conf.yaml
@@ -9,3 +9,5 @@ plugins:
   - bsmu.vision.plugins.loaders.image.simple.SimpleImageFileLoaderPlugin
   - bsmu.vision.plugins.post_load_converters.image_to_layered.ImageToLayeredImagePostLoadConverterPlugin
   - bsmu.vision.plugins.visualizers.image.layered.LayeredImageVisualizerPlugin
+
+warn-with-traceback: false
