--- a/retinal-fundus/src/bsmu/retinal_fundus/plugins/configs/RetinalFundusTableVisualizerPlugin.conf.yaml
+++ b/retinal-fundus/src/bsmu/retinal_fundus/plugins/configs/RetinalFundusTableVisualizerPlugin.conf.yaml
@@ -1,4 +1,9 @@
 disk-segmenter-model:
-  name: '005_saved_model.onnx'
+  name: 'disk-model-005.onnx'
+  input-size: [352, 352, 3]
+  preprocessing-mode: 'image-net-tf'
+
+cup-segmenter-model:
+  name: 'cup-model-006.onnx'
   input-size: [352, 352, 3]
   preprocessing-mode: 'image-net-tf'
