Added image padding to square shape for segmentation on image splitted into tiles.

--- a/retinal-fundus/src/bsmu/retinal_fundus/plugins/configs/RetinalFundusTableVisualizerPlugin.conf.yaml
+++ b/retinal-fundus/src/bsmu/retinal_fundus/plugins/configs/RetinalFundusTableVisualizerPlugin.conf.yaml
@@ -11,4 +11,4 @@ cup-segmenter-model:
 vessels-segmenter-model:
   name: 'vessels-model-083.onnx'
   input-size: [352, 352, 3]
-  preprocessing-mode: 'image-net-tf'
+  preprocessing-mode: 'image-net-torch'
