--- a/environment.yaml
+++ b/environment.yaml
@@ -1,57 +1,56 @@
-name: vision-py39-pyside2
+name: vision-py39-pyside6
 channels:
   - defaults
 dependencies:
-  - ca-certificates=2021.7.5=haa95532_1
-  - certifi=2021.5.30=py39haa95532_0
-  - openssl=1.1.1l=h2bbff1b_0
-  - python=3.9.6=h6244533_1
-  - setuptools=52.0.0=py39haa95532_0
-  - sqlite=3.36.0=h2bbff1b_0
-  - tzdata=2021a=h5d7bf9c_0
+  - ca-certificates=2021.10.26=haa95532_4
+  - certifi=2021.10.8=py39haa95532_2
+  - openssl=1.1.1m=h2bbff1b_0
+  - python=3.9.7=h6244533_1
+  - setuptools=58.0.4=py39haa95532_0
+  - sqlite=3.37.2=h2bbff1b_0
+  - tzdata=2021e=hda174b7_0
   - vc=14.2=h21ff451_1
   - vs2015_runtime=14.27.29016=h5e58377_2
-  - wheel=0.37.0=pyhd3eb1b0_1
-  - wincertstore=0.2=py39h2bbff1b_0
+  - wheel=0.37.1=pyhd3eb1b0_0
+  - wincertstore=0.2=py39haa95532_2
   - pip:
     - atomicwrites==1.4.0
-    - attrs==21.2.0
+    - attrs==21.4.0
     - colorama==0.4.4
-    - cx-freeze==6.8.2
+    - cx-freeze==6.10
     - cx-logging==3.0
-    - cycler==0.10.0
     - flatbuffers==2.0
-    - imageio==2.9.0
-    - importlib-metadata==4.8.1
+    - imageio==2.15.0
+    - importlib-metadata==4.10.1
     - iniconfig==1.1.1
-    - kiwisolver==1.3.2
-    - matplotlib==3.4.3
+    - lief==0.11.5
     - networkx==2.6.3
-    - nibabel==3.2.1
-    - numpy==1.21.2
-    - onnxruntime-gpu==1.9.0
-    - opencv-python==4.5.3.56
-    - packaging==21.0
-    - pandas==1.3.3
-    - pillow==8.3.2
-    - pip==21.3.1
+    - nibabel==3.2.2
+    - numpy==1.22.2
+    - onnxruntime-gpu==1.10.0
+    - opencv-python==4.5.5.62
+    - packaging==21.3
+    - pandas==1.4.0
+    - pillow==9.0.1
+    - pip==22.0.3
     - pluggy==1.0.0
-    - protobuf==3.19.1
+    - protobuf==3.19.4
     - py==1.11.0
-    - pydicom==2.2.1
-    - pyparsing==2.4.7
-    - pyside2==5.15.2
-    - pytest==6.2.5
+    - pydicom==2.2.2
+    - pyparsing==3.0.7
+    - pyside6==6.2.3
+    - pytest==7.0.0
     - python-dateutil==2.8.2
-    - pytz==2021.1
-    - pywavelets==1.1.1
-    - ruamel-yaml==0.17.16
+    - pytz==2021.3
+    - pywavelets==1.2.0
+    - ruamel-yaml==0.17.20
     - ruamel-yaml-clib==0.2.6
-    - scikit-image==0.18.3
-    - scipy==1.7.1
-    - shiboken2==5.15.2
+    - scikit-image==0.19.1
+    - scipy==1.8.0
+    - shiboken6==6.2.3
     - six==1.16.0
     - sortedcontainers==2.4.0
-    - tifffile==2021.8.30
+    - tifffile==2022.2.2
     - toml==0.10.2
-    - zipp==3.5.0
+    - tomli==2.0.1
+    - zipp==3.7.0
