--- a/retinal-fundus/src/bsmu/retinal_fundus/app/configs/RetinalFundusApp.conf.yaml
+++ b/retinal-fundus/src/bsmu/retinal_fundus/app/configs/RetinalFundusApp.conf.yaml
@@ -3,6 +3,7 @@ plugins:
       replace: bsmu.vision.plugins.windows.main.MainWindowPlugin
       alias: main_window
   - bsmu.retinal_fundus.plugins.table_visualizer.RetinalFundusTableVisualizerPlugin
+  - bsmu.retinal_fundus.plugins.histogram_visualizer.RetinalFundusHistogramVisualizerPlugin
 
   - bsmu.vision.plugins.file_dropper.FileDropperPlugin
   - bsmu.vision.plugins.loaders.image.simple.SimpleImageFileLoaderPlugin
