Added disk region selector plugin.

--- a/retinal-fundus/src/bsmu/retinal_fundus/app/configs/RetinalFundusApp.conf.yaml
+++ b/retinal-fundus/src/bsmu/retinal_fundus/app/configs/RetinalFundusApp.conf.yaml
@@ -4,6 +4,7 @@ plugins:
       alias: main_window
   - bsmu.retinal_fundus.plugins.table_visualizer.RetinalFundusTableVisualizerPlugin
   - bsmu.retinal_fundus.plugins.histogram_visualizer.RetinalFundusHistogramVisualizerPlugin
+  - bsmu.retinal_fundus.plugins.disk_region_selector.RetinalFundusDiskRegionSelectorPlugin
 
   - bsmu.vision.plugins.file_dropper.FileDropperPlugin
   - bsmu.vision.plugins.loaders.image.simple.SimpleImageFileLoaderPlugin
