Added config boolean parameter to preload DNN-model. Disabled model preloading by default, because on week computers it can freeze application during start.

--- a/retinal-fundus/src/bsmu/retinal_fundus/plugins/configs/RetinalFundusTableVisualizerPlugin.conf.yaml
+++ b/retinal-fundus/src/bsmu/retinal_fundus/plugins/configs/RetinalFundusTableVisualizerPlugin.conf.yaml
@@ -2,13 +2,16 @@ disk-segmenter-model:
   name: 'disk-model-005.onnx'
   input-size: [352, 352, 3]
   preprocessing-mode: 'image-net-tf'
+  preload: false
 
 cup-segmenter-model:
   name: 'cup-model-006.onnx'
   input-size: [352, 352, 3]
   preprocessing-mode: 'image-net-tf'
+  preload: false
 
 vessels-segmenter-model:
   name: 'vessels-model-083.onnx'
   input-size: [352, 352, 3]
   preprocessing-mode: 'image-net-torch'
+  preload: false
