--- a/retinal-fundus/src/bsmu/retinal_fundus/plugins/configs/RetinalFundusMsPredictorPlugin.conf.yaml
+++ b/retinal-fundus/src/bsmu/retinal_fundus/plugins/configs/RetinalFundusMsPredictorPlugin.conf.yaml
@@ -2,3 +2,4 @@ ms-predictor-model:
   name: 'ms-model-052.onnx'
   input-size: [256, 256, 3]
   preprocessing-mode: 'image-net-torch'
+  preload: false
