Added plugin to calculate NRR mask. Working on plugin to predict MS using mean HSV of NRR. Added visibility field to ImageLayer to use it like default value for ImageLayerViews. Fixed bug when undefined order of called slots leads to incorrect order of records.

--- a/retinal-fundus/src/bsmu/retinal_fundus/app/configs/RetinalFundusApp.conf.yaml
+++ b/retinal-fundus/src/bsmu/retinal_fundus/app/configs/RetinalFundusApp.conf.yaml
@@ -3,9 +3,11 @@ plugins:
       replace: bsmu.vision.plugins.windows.main.MainWindowPlugin
       alias: main_window
   - bsmu.retinal_fundus.plugins.table_visualizer.RetinalFundusTableVisualizerPlugin
+  - bsmu.retinal_fundus.plugins.nrr_mask_calculator.RetinalFundusNrrMaskCalculatorPlugin
   - bsmu.retinal_fundus.plugins.histogram_visualizer.RetinalFundusHistogramVisualizerPlugin
   - bsmu.retinal_fundus.plugins.disk_region_selector.RetinalFundusDiskRegionSelectorPlugin
   - bsmu.retinal_fundus.plugins.ms_predictor.RetinalFundusMsPredictorPlugin
+  - bsmu.retinal_fundus.plugins.nrr_hsv_ms_predictor.RetinalFundusNrrHsvMsPredictorPlugin
 
   - bsmu.vision.plugins.file_dropper.FileDropperPlugin
   - bsmu.vision.plugins.loaders.image.simple.SimpleImageFileLoaderPlugin
