Implemented plugin to aggregate MS scores of other predictors for all records of patient.

--- a/retinal-fundus/src/bsmu/retinal_fundus/plugins/configs/RetinalFundusMsPredictorPlugin.conf.yaml
+++ b/retinal-fundus/src/bsmu/retinal_fundus/plugins/configs/RetinalFundusMsPredictorPlugin.conf.yaml
@@ -1,5 +1,6 @@
 ms-predictor-model:
-  name: 'ms-model-052.onnx'
+  name: 'ms-model-072.onnx'
+  normalize: false
   input-size: [256, 256, 3]
   preprocessing-mode: 'image-net-torch'
   preload: false
