--- a/retinal-fundus/src/bsmu/retinal_fundus/app/configs/RetinalFundusApp.conf.yaml
+++ b/retinal-fundus/src/bsmu/retinal_fundus/app/configs/RetinalFundusApp.conf.yaml
@@ -6,6 +6,7 @@ plugins:
   - bsmu.retinal_fundus.plugins.nrr_mask_calculator.RetinalFundusNrrMaskCalculatorPlugin
   - bsmu.retinal_fundus.plugins.histogram_visualizer.RetinalFundusHistogramVisualizerPlugin
   - bsmu.retinal_fundus.plugins.disk_region_selector.RetinalFundusDiskRegionSelectorPlugin
+  - bsmu.retinal_fundus.plugins.ms_prediction_aggregator.RetinalFundusMsPredictionAggregatorPlugin
   - bsmu.retinal_fundus.plugins.ms_predictor.RetinalFundusMsPredictorPlugin
   - bsmu.retinal_fundus.plugins.xgboost_ms_predictor.RetinalFundusXgboostMsPredictorPlugin
   - bsmu.retinal_fundus.plugins.nrr_hsv_ms_predictor.RetinalFundusNrrHsvMsPredictorPlugin
