--- a/vision-plugins/src/bsmu/vision/plugins/tools/viewer/image/configs/WsiSmartBrushImageViewerToolPlugin.conf.yaml
+++ b/vision-plugins/src/bsmu/vision/plugins/tools/viewer/image/configs/WsiSmartBrushImageViewerToolPlugin.conf.yaml
@@ -1,7 +1,11 @@
 radius: 600
-min_radius: 2
+min_radius: 20
 max_radius: 2200
-max_radius_without_downscale: 100
+radius_zoom_factor: 1
+max_radius_without_downscale: 50
+downscale_factor: 1  # (0; 1]
+
+smart_mode_enabled: true
 
 number_of_clusters: 2
 paint_central_pixel_cluster: true
