Upgraded from Python 3.9 to Python 3.10. Other libs upgraded too.

--- a/vision-app/src/bsmu/vision/app/configs/App.conf.yaml
+++ b/vision-app/src/bsmu/vision/app/configs/App.conf.yaml
@@ -20,7 +20,7 @@ enable-gui: true
 
 max_thread_count: 1
 
-warn-with-traceback: true
+warn-with-traceback: false
 
 onnx_providers:
   - CUDAExecutionProvider
