--- a/environment.yaml
+++ b/environment.yaml
@@ -1,56 +1,66 @@
-name: vision-py39-pyside6
+name: vision-py310
 channels:
   - defaults
 dependencies:
-  - ca-certificates=2021.10.26=haa95532_4
-  - certifi=2021.10.8=py39haa95532_2
-  - openssl=1.1.1m=h2bbff1b_0
-  - python=3.9.7=h6244533_1
-  - setuptools=58.0.4=py39haa95532_0
-  - sqlite=3.37.2=h2bbff1b_0
-  - tzdata=2021e=hda174b7_0
+  - bzip2=1.0.8=he774522_0
+  - ca-certificates=2023.01.10=haa95532_0
+  - certifi=2022.12.7=py310haa95532_0
+  - libffi=3.4.2=hd77b12b_6
+  - openssl=1.1.1t=h2bbff1b_0
+  - pip=23.0.1=py310haa95532_0
+  - python=3.10.10=h966fe2a_2
+  - setuptools=65.6.3=py310haa95532_0
+  - sqlite=3.41.1=h2bbff1b_0
+  - tk=8.6.12=h2bbff1b_0
+  - tzdata=2022g=h04d1e81_0
   - vc=14.2=h21ff451_1
   - vs2015_runtime=14.27.29016=h5e58377_2
-  - wheel=0.37.1=pyhd3eb1b0_0
-  - wincertstore=0.2=py39haa95532_2
+  - wheel=0.38.4=py310haa95532_0
+  - wincertstore=0.2=py310haa95532_2
+  - xz=5.2.10=h8cc25b3_1
+  - zlib=1.2.13=h8cc25b3_0
   - pip:
-    - atomicwrites==1.4.0
-    - attrs==21.4.0
-    - colorama==0.4.4
-    - cx-freeze==6.10
-    - cx-logging==3.0
-    - flatbuffers==2.0
-    - imageio==2.15.0
-    - importlib-metadata==4.10.1
-    - iniconfig==1.1.1
-    - lief==0.11.5
-    - networkx==2.6.3
-    - nibabel==3.2.2
-    - numpy==1.22.2
-    - onnxruntime-gpu==1.10.0
-    - opencv-python==4.5.5.62
-    - packaging==21.3
-    - pandas==1.4.0
-    - pillow==9.0.1
-    - pip==22.0.3
-    - pluggy==1.0.0
-    - protobuf==3.19.4
-    - py==1.11.0
-    - pydicom==2.2.2
-    - pyparsing==3.0.7
-    - pyside6==6.2.3
-    - pytest==7.0.0
-    - python-dateutil==2.8.2
-    - pytz==2021.3
-    - pywavelets==1.2.0
-    - ruamel-yaml==0.17.20
-    - ruamel-yaml-clib==0.2.6
-    - scikit-image==0.19.1
-    - scipy==1.8.0
-    - shiboken6==6.2.3
-    - six==1.16.0
-    - sortedcontainers==2.4.0
-    - tifffile==2022.2.2
-    - toml==0.10.2
-    - tomli==2.0.1
-    - zipp==3.7.0
+      - attrs==22.2.0
+      - colorama==0.4.6
+      - coloredlogs==15.0.1
+      - cx-freeze==6.14.7
+      - cx-logging==3.1.0
+      - exceptiongroup==1.1.1
+      - flatbuffers==23.3.3
+      - humanfriendly==10.0
+      - imageio==2.26.1
+      - iniconfig==2.0.0
+      - lief==0.12.3
+      - mpmath==1.3.0
+      - networkx==3.0
+      - nibabel==5.0.1
+      - numpy==1.24.2
+      - onnxruntime-gpu==1.14.1
+      - opencv-python==4.7.0.72
+      - openslide-python==1.2.0
+      - packaging==23.0
+      - pandas==1.5.3
+      - pillow==9.4.0
+      - pluggy==1.0.0
+      - protobuf==4.22.1
+      - pydicom==2.3.1
+      - pyreadline3==3.4.1
+      - pyside6==6.4.3
+      - pyside6-addons==6.4.3
+      - pyside6-essentials==6.4.3
+      - pytest==7.2.2
+      - python-dateutil==2.8.2
+      - pytz==2022.7.1
+      - pywavelets==1.4.1
+      - ruamel-yaml==0.17.21
+      - ruamel-yaml-clib==0.2.7
+      - scikit-image==0.19.3
+      - scipy==1.10.1
+      - shiboken6==6.4.3
+      - six==1.16.0
+      - slideio==2.0.5
+      - sortedcontainers==2.4.0
+      - sympy==1.11.1
+      - tifffile==2023.3.21
+      - toml==0.10.2
+      - tomli==2.0.1
