Refactored some plugins to use mask pallete from common PalettePackSettings.

--- a/vision-plugins/src/bsmu/vision/plugins/overlayers/image/configs/ImageViewerOverlayerPlugin.conf.yaml
+++ b/vision-plugins/src/bsmu/vision/plugins/overlayers/image/configs/ImageViewerOverlayerPlugin.conf.yaml
@@ -1,8 +1,5 @@
 layers:
   masks:
-    # Next properties will be used, if there is no mask and we have to create one
-    palette:
-      row-by-name:
-        background: [ 0, 0, 0, 0, 0 ]
-        foreground: [ 1, 50, 170, 230, 255 ]
+    # Next properties will be used, if there is no mask, and we have to create one
+    palette: null  # if null, then default palette will be used
     opacity: 0.5
