Changed ThreadPool implementation to use QThreadPool instead of ThreadPoolExecutor. For DNN and general tasks now are used different ThreadPools. Added Task class, which can emit progress_changed signal.

--- a/vision-app/src/bsmu/vision/app/configs/App.conf.yaml
+++ b/vision-app/src/bsmu/vision/app/configs/App.conf.yaml
@@ -18,7 +18,8 @@ plugins:
 
 enable-gui: true
 
-max_thread_count: 1
+max_general_thread_count: null  # If null, then `QThread.idealThreadCount() - max_dnn_thread_count` will be used
+max_dnn_thread_count: 1
 
 warn-with-traceback: false
 
