--- a/retinal-fundus/src/bsmu/retinal_fundus/plugins/configs/RetinalFundusMsPredictorPlugin.conf.yaml
+++ b/retinal-fundus/src/bsmu/retinal_fundus/plugins/configs/RetinalFundusMsPredictorPlugin.conf.yaml
@@ -1,6 +1,6 @@
 ms-predictor-model:
   name: 'ms-model-072.onnx'
-  normalize: false
-  input-size: [256, 256, 3]
-  preprocessing-mode: 'image-net-torch'
   preload: false
+  input_size: [256, 256, 3]
+  normalize: false
+  preprocessing_mode: 'image-net-torch'
