--- a/retinal-fundus/src/bsmu/retinal_fundus/plugins/configs/RetinalFundusTableVisualizerPlugin.conf.yaml
+++ b/retinal-fundus/src/bsmu/retinal_fundus/plugins/configs/RetinalFundusTableVisualizerPlugin.conf.yaml
@@ -1,17 +1,17 @@
 disk-segmenter-model:
   name: 'disk-model-005.onnx'
-  input-size: [352, 352, 3]
-  preprocessing-mode: 'image-net-tf'
   preload: false
+  input_size: [352, 352, 3]
+  preprocessing_mode: 'image-net-tf'
 
 cup-segmenter-model:
   name: 'cup-model-006.onnx'
-  input-size: [352, 352, 3]
-  preprocessing-mode: 'image-net-tf'
   preload: false
+  input_size: [352, 352, 3]
+  preprocessing_mode: 'image-net-tf'
 
 vessels-segmenter-model:
   name: 'vessels-model-083.onnx'
-  input-size: [352, 352, 3]
-  preprocessing-mode: 'image-net-torch'
   preload: false
+  input_size: [352, 352, 3]
+  preprocessing_mode: 'image-net-torch'
